stop using flex on mobile sections

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -43,9 +43,11 @@ h1, h2, h3 {
 }
 
 .sekcja {
-    display: flex;
     justify-content: space-between;
     align-items: center;
+    img {
+        display: block;
+    }
 }
 
 
@@ -155,7 +157,6 @@ footer {
 }
 
 .column {
-    z-index: 10;
     display: flex;
     flex-direction: column;
     justify-content: center;
