--- a/src/css/mobile.scss
+++ b/src/css/mobile.scss
@@ -34,7 +34,6 @@
 
     .sekcja {
         padding: 10vmin;
-        flex-direction: column;
         img {
             width: 100%;
             height: auto;
